<resources>
    <string name="app_name">RentRoom</string>
    <string name="bottom_home">Trang chủ</string>
    <string name="bottom_service">Dịch vụ</string>
    <string name="bottom_notification">Yêu thích</string>
    <string name="bottom_profile">Cá nhân</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="postdashboard">Quản lý bài đăng</string>
    <string name="findaplace">Tìm phòng trọ</string>
    <string name="findpeople">Tìm người ở chung</string>
    <string name="forrent">Đăng tin cho thuê</string>
    <string name="forrent_update">Cập nhật tin cho thuê</string>
    <string name="Recently">Mới đăng gần đây</string>
    <string name="Showmore">Xem thêm</string>
    <string name="Explore">Khám phá</string>
    <string name="title_info_post">Thông tin đăng bài</string>
    <string name="hoten">Họ và tên</string>
    <string name="sdt">Số điện thoại</string>
    <string name="btn_dangky">Đăng ký</string>
    <string name="btn_dangnhap">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forgotpassword">Quên mật khẩu?</string>
    <string name="textview_dangky">Chưa có tài khoản?</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="txtviewdangnhap">Đã có tài khoản?</string>
    <string name="lichhen">Lịch hẹn xem phòng</string>
    <string name="quanlyphong">Quản lý phòng</string>
    <string name="chinhsuataikhoan">Chỉnh sửa tài khoản</string>
    <string name="capnhat">Cập nhật</string>
    <string name="default_web_client_id">1089171230154-vojh1sgv5mgtk7dmk3in7hhk48449edo.apps.googleusercontent.com</string>
    <string name="confirm">Phản hồi</string>
    <string name="confirmed">Đã xác nhận</string>
    <string name="refuse">Đã từ chối</string>
    <string name="send">Đã gửi</string>
    <string name="Search">Tìm kiếm...</string>
</resources>