<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/qlbd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="8dp"
            android:text="@string/postdashboard"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cancelButton"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_clear" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/house"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_house"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findaplace"
            android:textColor="@color/orange"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/groupusers"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_groupusers"/>

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findpeople"
            android:textColor="@color/orange"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contract"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_contract"/>

        <TextView
            android:id="@+id/rentRoom"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forrent"
            android:textColor="@color/orange"
            android:layout_marginStart="20dp"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>