<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkerwhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:background="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linear_layoutProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-50dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/search_bg"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/a"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtviewInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text=""
                        android:textSize="20sp"
                        tools:ignore="MissingConstraints">

                    </TextView>

                    <TextView
                        android:id="@+id/txtviewEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:textSize="20sp"
                        tools:ignore="MissingConstraints">

                    </TextView>
                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="1000dp">

            <TextView
                android:id="@+id/btnquanlyphong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/quanlyphong"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_quanlyphong"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btnlichhen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/lichhen"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_lichhen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnquanlyphong" />

            <TextView
                android:id="@+id/btnyeuthich"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="Phòng yêu thích"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_lichhen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlichhen" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnlichhen"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:drawableStart="@drawable/ic_lichhen"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="15dp"
                        android:text="@string/lichhen"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="@+id/btnquanlyphong"
                        app:layout_constraintTop_toBottomOf="@+id/btnquanlyphong" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/btnyeuthich"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:drawableStart="@drawable/ic_phongyeuthich"
                        android:drawablePadding="10dp"
                        android:gravity="center_vertical"
                        android:padding="15dp"
                        android:text="Phòng yêu thích"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="@+id/btnquanlyphong"
                        app:layout_constraintTop_toBottomOf="@+id/btnquanlyphong" />
                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/btnlichsu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="Lịch sử xem bài"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_lichhen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnyeuthich" />

            <TextView
                android:id="@+id/btndangxuat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:padding="15dp"
                android:text="@string/dangxuat"
                android:textSize="20sp"
                app:drawableStartCompat="@drawable/ic_dangxuat"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnlichsu" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</ScrollView>
